--- a/package.json
+++ b/package.json
@@ -22,12 +22,9 @@
     "bootswatch": "^3.3.7",
     "btoa": "^1.1.2",
     "isomorphic-fetch": "^2.2.1",
-    "json2csv": "^3.7.0",
-    "json2xls": "^0.1.2",
     "kinto-http": "^4.3.4",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
-    "react-clipboard.js": "^0.2.5",
     "react-dom": "^15.3.2",
     "react-drag-and-drop": "^2.0.1",
     "react-jsonschema-form": "^0.40.0",
@@ -48,6 +45,7 @@
     "btoa": "^1.1.2",
     "chai": "^3.3.0",
     "css-loader": "^0.23.1",
+    "depcheck": "^1.4.0",
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.6.3",
     "express": "^4.13.3",
