--- a/package.json
+++ b/package.json
@@ -65,12 +65,11 @@
   "directories": {
     "test": "test"
   },
-  "author": "Kinto team <kinto@mozilla.org>",
+  "author": "Michał Bargiel <michal5bargiel@gmail.com>",
   "keywords": [
     "react",
     "form",
     "json-schema"
   ],
-  "license": "Apache-2.0",
-  "homepage": "https://github.com/Kinto/formbuilder#readme"
+  "license": "MIT"
 }
