--- a/package.json
+++ b/package.json
@@ -18,17 +18,16 @@
     "lib"
   ],
   "dependencies": {
+    "@rjsf/core": "^2.5.1",
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
-    "react": "^15.7.0",
-    "react-bootstrap": "^0.30.3",
-    "react-dom": "^15.7.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "^17.0.2",
     "react-drag-and-drop": "^2.0.1",
-    "react-jsonschema-form": "^0.40.0",
-    "react-redux": "^4.0.6",
+    "react-redux": "^7.2.4",
     "redux": "^3.0.5",
     "redux-thunk": "^1.0.3",
-    "riek": "^1.0.2",
     "string": "^3.3.1",
     "urlencode": "^1.1.0",
     "uuid": "^2.0.2"
@@ -52,7 +51,6 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "mocha": "^2.3.0",
-    "react-addons-test-utils": "^15.3.2",
     "react-transform-hmr": "^1.0.1",
     "rimraf": "^2.4.4",
     "sinon": "^1.17.2",
