--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src test",
     "publish-to-gh-pages": "npm run build:formbuilder-gh && gh-pages --dist build/",
     "publish-to-npm": "npm run dist && npm publish",
-    "start": "node devServer.js",
+    "start": "react-scripts start",
     "tdd": "npm run test -- -w",
     "test": "SERVER_URL=http://localhost:8888/v1 NODE_ENV=test mocha --compilers js:babel/register --recursive --require ./test/setup-jsdom.js $(find test -name '*_test.js')"
   },
@@ -33,9 +33,9 @@
     "uuid": "^2.0.2"
   },
   "devDependencies": {
-    "babel": "^5.8.20",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^5.3.2",
+    "babel": "^6.23.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-react-transform": "^1.1.1",
     "babel-polyfill": "^6.9.1",
     "chai": "^3.3.0",
@@ -44,19 +44,20 @@
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.6.3",
     "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^0.9.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.9.0",
-    "html": "0.0.10",
+    "html": "^1.0.0",
     "jsdom": "^7.2.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "mocha": "^2.3.0",
+    "mocha": "^8.3.2",
+    "react-scripts": "^4.0.3",
     "react-transform-hmr": "^1.0.1",
     "rimraf": "^2.4.4",
     "sinon": "^1.17.2",
     "style-loader": "^0.13.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.10.5",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.36.2",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
   },
