--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "A tool to build forms on the web",
   "scripts": {
-    "build:formbuilder": "NODE_ENV=production rimraf build && webpack --config webpack.config.prod.js --optimize-minimize && cp formbuilder/index.prod.html build/index.html",
-    "build:formbuilder-gh": "rimraf build && webpack --config webpack.config.github.js && cp formbuilder/index.prod.html build/index.html",
+    "build:formbuilder": "NODE_ENV=production rimraf build && webpack --config webpack.config.prod.js --optimize-minimize && cp public/index.prod.html build/index.html",
+    "build:formbuilder-gh": "rimraf build && webpack --config webpack.config.github.js && cp public/index.prod.html build/index.html",
     "lint": "eslint src test",
     "publish-to-gh-pages": "npm run build:formbuilder-gh && gh-pages --dist build/",
     "publish-to-npm": "npm run dist && npm publish",
@@ -33,18 +33,11 @@
     "uuid": "^2.0.2"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-react-transform": "^1.1.1",
-    "babel-polyfill": "^6.9.1",
     "chai": "^3.3.0",
     "css-loader": "^0.23.1",
     "depcheck": "^1.4.0",
-    "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.6.3",
     "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.9.0",
     "html": "^1.0.0",
     "jsdom": "^7.2.1",
@@ -56,10 +49,7 @@
     "rimraf": "^2.4.4",
     "sinon": "^1.17.2",
     "style-loader": "^0.13.0",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.36.2",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0"
+    "url-loader": "^4.1.1"
   },
   "directories": {
     "test": "test"
