--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@rjsf/core": "^2.5.1",
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
