--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "rimraf": "^2.4.4",
     "sinon": "^1.17.2",
     "style-loader": "^0.13.0",
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.2.4",
     "url-loader": "^4.1.1"
   },
   "directories": {
