--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "uuid": "^2.0.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.14.2",
     "chai": "^3.3.0",
     "css-loader": "^0.23.1",
     "depcheck": "^1.4.0",
@@ -50,8 +51,6 @@
     "rimraf": "^2.4.4",
     "sinon": "^1.17.2",
     "style-loader": "^0.13.0",
-    "ts-jest": "^26.5.6",
-    "typescript": "^4.2.4",
     "url-loader": "^4.1.1"
   },
   "author": "Michał Bargiel <michal5bargiel@gmail.com>",
@@ -72,12 +71,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "jest": {
-    "transform": {
-      "\\.js$": [
-        "ts-jest"
-      ]
-    }
   }
 }
